Add UC1 implementation front
